# Eikonal-Solver

./: .gitignore  CMakeLists.txt  README.md  VtkParser.cpp  generate test.py  main.cpp  prova.cpp  test.cpp  test1.txt
LocalProblem/: DescentDirectionFactory.cpp  LineSearchSolver.cpp  Makefile  README.md  main_eikonal  main_eikonal.cpp  main_eikonal.mxx  main_eikonal2D  main_eikonal3D  solveEikonalLocalProblem.cpp
LocalProblem/include/: DescentDirectionBase.hpp  DescentDirectionFactory.hpp  DescentDirections.hpp  Eikonal_traits.hpp  Factory.hpp  GradientFiniteDifference.hpp  LineSearchSolver.hpp  LineSearch_options.hpp  LineSearch_traits.hpp  Optimization_options.hpp  Phi.hpp  SimplexData.hpp  solveEikonalLocalProblem.hpp
LocalProblem/pythonBindings/: pyEikonal.cpp  testPyEikonal2.py  testPyEikonal3.py
include/: DescentDirections.hpp  EikonalMath.hpp  EikonalSolver.hpp  EikonalTraits.hpp  LineSearch_options.hpp  LocalSolver.hpp  Mesh.h  Mesh.hpp  MeshLoader.hpp  Mesh_traits.hpp  Methods.hpp  Optimization_options.hpp  OptimizedLocalSolver.hpp  PointsEdge.h  SimplexData.hpp  VtkParser.hpp
include-cuda/: GlobalSolverKernels.hpp  LocalSolverKernels.hpp
src/: ConstraintedLocalSolver.cpp  EikonalHeapComparator.cpp  FIM.cpp  FIMParallel.cpp  FMM.cpp  FMMOpt.cpp  FMMParallel.cpp  FMMParallel_v2.cpp  MeshLoader.cpp  Mesh_FIM.cpp  OptimizedConstrainedLocalSolver.cpp  Patch_FIM.cpp  VtkParser.cpp
src-cuda/: GlobalSolverKernels.cu  LocalSolverKernels.cu  Patch_FIMC.cpp
testdata/: square16x16.txt
testfiles_torus/: torus_tetra_010.vtk  torus_tetra_025.vtk  torus_tetra_050.vtk  torus_tetra_075.vtk  torus_tri_005.vtk  torus_tri_050.vtk  torus_tri_075.vtk
testfiles_torus_tetra/: torus_tetra_100.vtk
testfiles_torus_tri/: torus_tri_010.vtk  torus_tri_025.vtk  torus_tri_100.vtk
utils/: MeshLoader.cpp  VtkParser.cpp
